button glitch fix style fix

--- a/public/preference.html
+++ b/public/preference.html
@@ -35,7 +35,7 @@
   <div class="container">
     <div class="box-container">
       <div class="box-top">
-        <span class="box-top-title--preference">THEME</span>
+        <h2 class="title box-top-title--preference">THEME</h2>
       </div>
       <div class="box-container--preference">
         <form>
@@ -52,7 +52,7 @@
 
     <div class="box-container">
       <div class="box-top">
-        <span class="box-top-title--preference">NAME</span>
+        <h2 class="title box-top-title--preference">NAME</h2>
         <img src="./image/edit-button.png" alt="edit" width="20" height="20" class="edit-icon--preference" id="edit-username--preference" />
       </div>
       <div>
@@ -64,7 +64,7 @@
 
     <div class="box-container ">
       <div class="box-top">
-        <span class="box-top-title--preference">EMAIL</span>
+        <h2 class="title box-top-title--preference">EMAIL</h2>
         <img src="./image/edit-button.png" alt="edit" width="20" height="20" class="edit-icon--preference" id="edit-email--preference" />
       </div>
       <div>
@@ -76,7 +76,7 @@
 
     <div class="box-container">
       <div class="box-top">
-        <span class="box-top-title--preference">JOINED GROUP</span>
+        <h2 class="title box-top-title--preference">JOINED GROUP</h2>
       </div>
       <div>
         <div class="group-box-content--preference">
@@ -103,15 +103,14 @@
                   <img src="./image/info-icon.png" alt="info" width="20" height="20" class="info--preference" /></a></span>
             </span>
           </div>
-
-
         </div>
       </div>
     </div>
+    <a href="./main.html"><button class="button preference--button">CANCEL</button></a>
+    <button class="button preference--button" id="savebutton">SAVE</button>
   </div>
 
-  <a href="./main.html"><button class="button preference--button">CANCEL</button></a>
-  <button class="button preference--button" id="savebutton">SAVE</button>
+
 
 
   <!-- Import and configure the Firebase SDK -->
